--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,6 +5,9 @@ pipeline {
             args '-v /root/.m2:/root/.m2 -v /var/run/docker.sock:/var/run/docker.sock'  
         }
     }
+    triggers {
+      cron 'H/15 * * * *'
+    }
 
     environment {
         DOCKERHUB_CREDENTIALS = credentials('dockerHub')
