--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
     }
 
     triggers {
-        cron '0 * * * *'  // Run at the top of every hour
+        cron '0 * * * *'  
     }
 
     environment {
