--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -50,7 +50,7 @@ pipeline {
                         mvn clean verify sonar:sonar \
                           -Dsonar.projectKey=ajava-maven-project \
                           -Dsonar.projectName='ajava-maven-project' \
-                          -Dsonar.host.url=http://13.69.247.235:9000 \
+                          -Dsonar.host.url=http://localhost:9000 \
                           -Dsonar.token=${SONAR_TOKEN}
                     """
                 }
