--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,40 +1,29 @@
 pipeline {
     agent {
         docker {
-            image 'ilyes94/maven-docker-java17'
-            args '-v /root/.m2:/root/.m2 -v /var/run/docker.sock:/var/run/docker.sock'  
+            image 'maven:3.8.6-openjdk-17'  // Image officielle
+            args '-v $HOME/.m2:/root/.m2'    // Correct mount path
         }
     }
 
     triggers {
-        cron 'H/30 * * * *'  
+        cron 'H/30 * * * *'
     }
 
     environment {
         DOCKERHUB_CREDENTIALS = credentials('dockerHub')
-        DOCKER_CONFIG = '/tmp/.docker'  
     }
 
     stages {
         stage('Build') {
             steps {
-                script {
-                    def name = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.name', returnStdout: true).trim()
-                    def version = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.version', returnStdout: true).trim()
-                    sh 'docker info'  
-                    sh 'mvn -B -DskipTests clean package'
-                }
+                sh 'mvn -B -DskipTests clean package'
             }
         }
 
         stage('Test') {
             steps {
-                script {
-                    def name = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.name', returnStdout: true).trim()
-                    def version = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.version', returnStdout: true).trim()
-                    sh 'docker info'
-                    sh 'mvn test'
-                }
+                sh 'mvn test'
             }
             post {
                 always {
@@ -47,55 +36,30 @@ pipeline {
             steps {
                 withCredentials([string(credentialsId: 'sonar-token', variable: 'SONAR_TOKEN')]) {
                     sh """
-                        mvn clean verify sonar:sonar \
-                          -Dsonar.projectKey=ajava-maven-project \
-                          -Dsonar.projectName='ajava-maven-project' \
-                          -Dsonar.host.url=http://localhost:9000 \
-                          -Dsonar.token=${SONAR_TOKEN}
+                        mvn sonar:sonar \
+                        -Dsonar.projectKey=ajava-maven-project \
+                        -Dsonar.host.url=http://localhost:9000 \
+                        -Dsonar.token=${SONAR_TOKEN}
                     """
                 }
             }
         }
 
-        stage('Deliver') {
-            steps {
-                sh './jenkins/scripts/deliver.sh'
-            }
-        }
-
-        stage('Docker Build') {
+        stage('Docker Operations') {
+            agent any  // Exécute sur l'hôte Jenkins (accès direct à Docker)
             steps {
                 script {
                     def name = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.name', returnStdout: true).trim()
                     def version = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.version', returnStdout: true).trim()
-                    sh "docker build -t ${name}:${version} -f Dockerfile ."
-                }
-            }
-        }
-
-        stage('Docker Push') {
-            steps {
-                script {
-                    def name = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.name', returnStdout: true).trim()
-                    def version = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.version', returnStdout: true).trim()
+                    
                     withCredentials([usernamePassword(credentialsId: 'dockerHub', passwordVariable: 'dockerHubPassword', usernameVariable: 'dockerHubUser')]) {
                         sh """
-                            echo ${env.dockerHubPassword} | docker login -u ${env.dockerHubUser} --password-stdin
-                            docker tag ${name}:${version} ${env.dockerHubUser}/${name}:${version}
-                            docker push ${env.dockerHubUser}/${name}:${version}
+                            docker build -t ${name}:${version} .
+                            echo ${dockerHubPassword} | docker login -u ${dockerHubUser} --password-stdin
+                            docker tag ${name}:${version} ${dockerHubUser}/${name}:${version}
+                            docker push ${dockerHubUser}/${name}:${version}
+                            docker run -d --name ${name}-${version} ${dockerHubUser}/${name}:${version}
                         """
-                    }
-                }
-            }
-        }
-
-        stage('Run Docker Container') {
-            steps {
-                script {
-                    def name = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.name', returnStdout: true).trim()
-                    def version = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.version', returnStdout: true).trim()
-                    withCredentials([usernamePassword(credentialsId: 'dockerHub', passwordVariable: 'dockerHubPassword', usernameVariable: 'dockerHubUser')]) {
-                        sh "docker run -d --name ${name}-${version}-$BUILD_NUMBER ${env.dockerHubUser}/${name}:${version}"
                     }
                 }
             }
