--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -43,19 +43,19 @@ pipeline {
             }
         }
 
-        stage('SonarQube Analysis') {
-            steps {
-                withCredentials([string(credentialsId: 'sonar-token', variable: 'SONAR_TOKEN')]) {
-                    sh """
-                        mvn clean verify sonar:sonar \
-                          -Dsonar.projectKey=ajava-maven-project \
-                          -Dsonar.projectName='ajava-maven-project' \
-                          -Dsonar.host.url=http://localhost:9000 \
-                          -Dsonar.token=${SONAR_TOKEN}
-                    """
-                }
-            }
+   stage('SonarQube Analysis') {
+    steps {
+        withCredentials([string(credentialsId: 'sonar-token', variable: 'SONAR_TOKEN')]) {
+            sh """
+                mvn clean verify sonar:sonar \
+                  -Dsonar.projectKey=ajava-maven-project \
+                  -Dsonar.projectName='ajava-maven-project' \
+                  -Dsonar.host.url=http://host.docker.internal:9000 \
+                  -Dsonar.token=${SONAR_TOKEN}
+            """
         }
+    }
+}
 
         stage('Deliver') {
             steps {
