--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -11,30 +11,23 @@ pipeline {
     }
 
     environment {
-        DOCKERHUB_CREDENTIALS = credentials('dockerhub')  // Corrigé ici
+        DOCKERHUB_CREDENTIALS = credentials('dockerhub')
         DOCKER_CONFIG = '/tmp/.docker'
+        PROJECT_NAME = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.name', returnStdout: true).trim()
+        PROJECT_VERSION = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.version', returnStdout: true).trim()
     }
 
     stages {
         stage('Build') {
             steps {
-                script {
-                    def name = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.name', returnStdout: true).trim()
-                    def version = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.version', returnStdout: true).trim()
-                    sh 'docker info'
-                    sh 'mvn -B -DskipTests clean package'
-                }
+                sh 'docker info'
+                sh 'mvn -B -DskipTests clean package'
             }
         }
 
         stage('Test') {
             steps {
-                script {
-                    def name = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.name', returnStdout: true).trim()
-                    def version = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.version', returnStdout: true).trim()
-                    sh 'docker info'
-                    sh 'mvn test'
-                }
+                sh 'mvn test'
             }
             post {
                 always {
@@ -46,13 +39,13 @@ pipeline {
         stage('SonarQube Analysis') {
             steps {
                 withCredentials([string(credentialsId: 'sonarqube-token', variable: 'SONAR_TOKEN')]) {
-                    sh """
+                    sh '''
                         mvn clean verify sonar:sonar \
-                          -Dsonar.projectKey=ajava-maven-project \
-                          -Dsonar.projectName='ajava-maven-project' \
+                          -Dsonar.projectKey=second-test \
+                          -Dsonar.projectName='second-test' \
                           -Dsonar.host.url=http://localhost:9000 \
-                          -Dsonar.token=${SONAR_TOKEN}
-                    """
+                          -Dsonar.token=$SONAR_TOKEN
+                    '''
                 }
             }
         }
@@ -65,38 +58,26 @@ pipeline {
 
         stage('Docker Build') {
             steps {
-                script {
-                    def name = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.name', returnStdout: true).trim()
-                    def version = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.version', returnStdout: true).trim()
-                    sh "docker build -t ${name}:${version} -f Dockerfile ."
-                }
+                sh "docker build -t ${PROJECT_NAME}:${PROJECT_VERSION} -f Dockerfile ."
             }
         }
 
         stage('Docker Push') {
             steps {
-                script {
-                    def name = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.name', returnStdout: true).trim()
-                    def version = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.version', returnStdout: true).trim()
-                    withCredentials([usernamePassword(credentialsId: 'dockerhub-credentials', passwordVariable: 'dockerHubPassword', usernameVariable: 'dockerHubUser')]) {
-                        sh """
-                            echo ${dockerHubPassword} | docker login -u ${dockerHubUser} --password-stdin
-                            docker tag ${name}:${version} ${dockerHubUser}/${name}:${version}
-                            docker push ${dockerHubUser}/${name}:${version}
-                        """
-                    }
+                withCredentials([usernamePassword(credentialsId: 'dockerhub-credentials', passwordVariable: 'dockerHubPassword', usernameVariable: 'dockerHubUser')]) {
+                    sh '''
+                        echo "$dockerHubPassword" | docker login -u "$dockerHubUser" --password-stdin
+                        docker tag ${PROJECT_NAME}:${PROJECT_VERSION} ${dockerHubUser}/${PROJECT_NAME}:${PROJECT_VERSION}
+                        docker push ${dockerHubUser}/${PROJECT_NAME}:${PROJECT_VERSION}
+                    '''
                 }
             }
         }
 
         stage('Run Docker Container') {
             steps {
-                script {
-                    def name = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.name', returnStdout: true).trim()
-                    def version = sh(script: 'mvn -q -DforceStdout help:evaluate -Dexpression=project.version', returnStdout: true).trim()
-                    withCredentials([usernamePassword(credentialsId: 'dockerhub-credentials', passwordVariable: 'dockerHubPassword', usernameVariable: 'dockerHubUser')]) {
-                        sh "docker run -d --name ${name}-${version}-$BUILD_NUMBER ${dockerHubUser}/${name}:${version}"
-                    }
+                withCredentials([usernamePassword(credentialsId: 'dockerhub-credentials', passwordVariable: 'dockerHubPassword', usernameVariable: 'dockerHubUser')]) {
+                    sh "docker run -d --name ${PROJECT_NAME}-${PROJECT_VERSION}-$BUILD_NUMBER ${dockerHubUser}/${PROJECT_NAME}:${PROJECT_VERSION}"
                 }
             }
         }
