--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -36,19 +36,19 @@ pipeline {
             }
         }
 
-        stage('SonarQube Analysis') {
-            steps {
-                withCredentials([string(credentialsId: 'sonarqube-token', variable: 'SONAR_TOKEN')]) {
-                    sh '''
-                        mvn clean verify sonar:sonar \
-                          -Dsonar.projectKey=second-test \
-                          -Dsonar.projectName='second-test' \
-                          -Dsonar.host.url=http://localhost:9000 \
-                          -Dsonar.token=$SONAR_TOKEN
-                    '''
-                }
-            }
+       stage('SonarQube Analysis') {
+    steps {
+        withCredentials([string(credentialsId: 'sonarqube-token', variable: 'SONAR_TOKEN')]) {
+            sh """
+                mvn clean verify sonar:sonar \
+                -Dsonar.projectKey=second-test \
+                -Dsonar.projectName=second-test \
+                -Dsonar.host.url=http://localhost:9000 \
+                -Dsonar.token=${SONAR_TOKEN}
+            """
         }
+    }
+}
 
         stage('Deliver') {
             steps {
